# secretlens

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/secretlens/: __init__.py  __main__.py  cli.py  entropy.py  patterns.py  reporter.py  scanner.py
tests/: test_entropy.py  test_patterns.py  test_scanner.py
