[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secretlens"
version = "0.1.0"
description = "A fast, lightweight secret scanner for codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "secretlens contributors" },
]
keywords = ["security", "secrets", "scanner", "git", "pre-commit", "devsecops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
secretlens = "secretlens.cli:main"

[project.urls]
Homepage = "https://github.com/MikeDee101/secretlens"
Repository = "https://github.com/MikeDee101/secretlens"
Issues = "https://github.com/MikeDee101/secretlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/secretlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
